regression/fail/modules.1.sml
structure S:
   sig
      datatype t = T
   end =
   struct
      datatype 'a t = T
   end
